<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
	
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.apache.tapestry</groupId>
	<artifactId>tapestry-liferay</artifactId>
	<parent>
		   <groupId>org.apache.tapestry</groupId>
		   <artifactId>tapestry5-portlet-globals</artifactId>
		   <version>5.4.0</version>
	</parent>
	<name>Tapestry5 Portlet 2.0 Liferay helpers</name>
	<dependencies>
		<dependency>
			<groupId>org.apache.tapestry</groupId>
			<artifactId>tapestry-core</artifactId>
			<version>${tapestry-release-version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.tapestry</groupId>
			<artifactId>tapestry5-portlet</artifactId>
			<version>${global.version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.tapestry</groupId>
			<artifactId>tapestry-test</artifactId>
			<version>${tapestry-release-version}</version>
			<scope>test</scope>
		</dependency>
		
		
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>5.8</version>
			<classifier>jdk15</classifier>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>2.4</version>
			<scope>test</scope>
		</dependency>

		

		<!-- Provided by the servlet container, but sometimes referenced in the 
			application code. -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>2.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.portlet</groupId>
			<artifactId>portlet-api</artifactId>
			<version>2.0</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>

		<!-- Liferay dependencies -->
		<dependency>
			<groupId>com.liferay.portal</groupId>
			<artifactId>portal-impl</artifactId>
			<version>${liferay.version}</version>
			<scope>provided</scope>
		</dependency>	
		<dependency>
			<groupId>com.liferay.portal</groupId>
			<artifactId>portal-service</artifactId>
			<version>${liferay.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.liferay.portal</groupId>
			<artifactId>util-bridges</artifactId>
			<version>${liferay.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.liferay.portal</groupId>
			<artifactId>util-taglib</artifactId>
			<version>${liferay.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.liferay.portal</groupId>
			<artifactId>util-java</artifactId>
			<version>${liferay.version}</version>
			<scope>provided</scope>
		</dependency>
		
	</dependencies>
	<build>
	    <plugins>
	    	<plugin>
  				<groupId>org.apache.openejb.maven</groupId>
  				<artifactId>tomee-maven-plugin</artifactId>
  				<version>1.0.0</version>
  				<configuration>
    				<args>-Xmx1024m -XX:MaxPermSize=256m</args>
    				<removeDefaultWebapps>true</removeDefaultWebapps>
    				<zip>false</zip>
    				<libs>
      					<lib>javax.portlet:portlet-api:2.0</lib>
      					<lib>com.liferay.portal:portal-service:6.1.1</lib>
    				</libs>
    				<webapps>
      					<webapp>com.liferay.portal:portal-web:6.1.1?name=ROOT</webapp>
      				</webapps>
  				</configuration>
			</plugin>
	        <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				
				<configuration>
					<archive>
						<manifestEntries>
							<tapestry-Module-Classes>
								org.apache.tapestry5.liferay.services.LiferayModule
							</tapestry-Module-Classes>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.1.1</version>
				<configuration>
					<warName>${project.artifactId}</warName>
					<outputDirectory>${project.build.directory}/deploy</outputDirectory>
				</configuration>
			</plugin>
	        <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<optimize>true</optimize>
				</configuration>
			</plugin>

			
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
		        	<groupId>org.apache.maven.plugins</groupId>
					  <artifactId>maven-source-plugin</artifactId>
					  <configuration>
					    <attach>true</attach>
					  </configuration>
					  <executions>
					    <execution>
					      <phase>install</phase>
					      <goals>
					        <goal>jar</goal>
					      </goals>
					    </execution>
					  </executions>
		        </plugin>
				<!--This plugin's configuration is used to store Eclipse m2e settings 
					only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.portals.pluto
										</groupId>
										<artifactId>
											maven-pluto-plugin
										</artifactId>
										<versionRange>
											[2.0.3,)
										</versionRange>
										<goals>
											<goal>assemble</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore></ignore>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<reporting>

		<!-- Adds a report detailing the components, mixins and base classes defined 
			by this module. -->
		<plugins>
			<plugin>
				<groupId>org.apache.tapestry</groupId>
				<artifactId>tapestry-component-report</artifactId>
				<version>${tapestry-release-version}</version>
				<configuration>
					<rootPackage>org.apache.tapestry5.liferay</rootPackage>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<repositories>
    
        <repository>
			<id>repo.maven</id>
			<url>http://repo1.maven.org/maven2/</url>
		</repository>

		<repository>
			<id>codehaus.snapshots</id>
			<url>http://snapshots.repository.codehaus.org</url>
		</repository>
		
		<repository>
			<id>OpenQA_Release</id>
			<name>OpenQA Release Repository</name>
			<url>http://archiva.openqa.org/repository/releases/</url>
		</repository>
		
		<repository>
      		<id>apache-snapshot</id>
      		<url>https://repository.apache.org/content/groups/snapshots/</url>
    	</repository>
		
	</repositories>

	<pluginRepositories>

		<!-- As above, this can be commented out when access to the snapshot version 
			of a Tapestry Maven plugin is not required. -->

		<pluginRepository>
			<id>apache-maven-repository</id>
			<url>http://repo.maven.apache.org/maven2/org/apache/maven/plugins/</url>
		</pluginRepository>


		 <pluginRepository>
            <id>jettySnapshots</id>
            <name>Jetty Maven2 Snapshot Repository</name>
            <url>http://snapshots.repository.codehaus.org</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <layout>default</layout>
        </pluginRepository>
        
        <pluginRepository>
            <id>jettyRelease</id>
            <name>Jetty Maven2 Snapshot Repository</name>
            <url>http://repository.codehaus.org</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <layout>default</layout>
        </pluginRepository>

	</pluginRepositories>
<profiles>
	<profile>
  	<id>liferay</id>
  	<activation>
    	<property>
      	<name>liferay.home.dir</name>
    	</property>
  	</activation>
  	<build>
    	<plugins>
      	<plugin>
        <groupId>org.codehaus.cargo</groupId>
        <artifactId>cargo-maven2-plugin</artifactId>
        <version>1.0.6</version>
        <executions>
          <execution>
            <id>start-liferay</id>
            <phase>pre-integration-test</phase>
            <goals>
              <goal>start</goal>
            </goals>
          </execution>
          <execution>
            <id>stop-liferay</id>
            <phase>post-integration-test</phase>
            <goals>
              <goal>stop</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <skip>false</skip>
          <wait>false</wait>
          <container>
            <containerId>tomcat7x</containerId>
            <home>${liferay.home.dir}/${liferay.tomcat.version}
            </home>
            <timeout>100000</timeout>
            <type>installed</type>
            <systemProperties>
              <file.encoding>UTF8</file.encoding>
              <external-properties>${liferay.home.dir}/portal-ext.properties
              </external-properties>
            </systemProperties>
          </container>
          <configuration>
            <home>${liferay.home.dir}/${liferay.tomcat.version}</home>
            <type>existing</type>
            <properties>
              <!-- cargo.jvmargs>-Xmx800m -XX:MaxPermSize=512m
              </cargo.jvmargs-->
              <cargo.servlet.port>${liferay.port}</cargo.servlet.port>
              <cargo.logging>high</cargo.logging>
            </properties>
          </configuration>
        </configuration>
      </plugin>

      <plugin>
        <groupId>com.liferay.maven.plugins</groupId>
        <artifactId>liferay-maven-plugin</artifactId>
        <version>6.0.5</version>
        <executions>
          <execution>
            <id>liferay-deploy</id>
            <phase>pre-integration-test</phase>
            <goals>
              <goal>deploy</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <autoDeployDir>${liferay.home.dir}/deploy</autoDeployDir>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-antrun-plugin</artifactId>
        <executions>
          <execution>
            <id>wait-for-liferay</id>
            <phase>pre-integration-test</phase>
            <configuration>
              <tasks>
                <echo>Wait 300 seconds for Liferay..</echo>
                <waitfor maxwait="300" maxwaitunit="second">
                  <available file="errors.log" />
                </waitfor>
              </tasks>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
          <execution>
            <id>clean-liferay</id>
            <phase>clean</phase>
            <configuration>
              <tasks>
                <echo>Cleaning Liferay..</echo>
                <delete
                  dir="${liferay.home.dir}/${liferay.tomcat.version}/webapps/${project.build.finalName}"
                  quiet="true" />
                <delete dir="${liferay.home.dir}/${liferay.tomcat.version}/work"
                  quiet="true" />
                <delete dir="${liferay.home.dir}/${liferay.tomcat.version}/temp"
                  quiet="true" />
              </tasks>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.9</version>
        <executions>
          <execution>
            <id>selenium2-firefox-test</id>
            <phase>integration-test</phase>
            <goals>
              <goal>integration-test</goal>
            </goals>
            <configuration>
              <includes>
                <include>**/IndexPortletTests.java
                </include>
              </includes>
              <systemPropertyVariables>
                <selenium.baseURL>http://localhost:${liferay.port}/web/guest/testing
                </selenium.baseURL>
                <selenium.pathToFirefoxBinary>${selenium.firefox.binary}
                </selenium.pathToFirefoxBinary>
              </systemPropertyVariables>
              <reportsDirectory>${project.build.directory}/failsafe-reports/firefox
              </reportsDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.7.2</version>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>

    </plugins>
  </build>
</profile>
</profiles>

	<properties>
		<global.version>5.4.0</global.version>
		<tapestry-release-version>5.4.0</tapestry-release-version>
		<pluto.version>2.0.2</pluto.version>
		<liferay.version>6.2.3</liferay.version>
		<liferay.home.dir>C:/Liferay/6.2-ga4</liferay.home.dir>
		<liferay.tomcat.version>tomcat-7.0.40</liferay.tomcat.version>
		<liferay.port>8080</liferay.port>
		<jetty-version>7.0.0.v20091005</jetty-version>
	</properties>
</project>
